# markov

./: CMakeLists.txt  README  makefile
src/: CMakeLists.txt  corpus-data.h  corpus-main.c  corpus.c  corpus.h  rand-markov.c
src/corpus/: corpus-data.h  corpus-index.c  corpus-index.h  corpus-main.c  corpus.c  corpus.h
src/rand-markov/: rand-markov.c
test/: CMakeLists.txt
test/c/: corpus-index-test.c
test/py/: correct_test.py  equals_test.py
test/src/: corpus-index-test.c
test/test_check/: simple_check
test/test_input/: beowulf
