FILE(GLOB CORPUS_SOURCES corpus/*.c)
SET(CORPUS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/corpus)
SET(CORPUS_LIB corpus-lib)
FILE(GLOB SAMPLE_SOURCES sample/*.c)

INCLUDE_DIRECTORIES(${CORPUS_INCLUDE})
ADD_LIBRARY(${CORPUS_LIB} ${CORPUS_SOURCES})

ADD_EXECUTABLE(corpus corpus-main.c)
TARGET_LINK_LIBRARIES(corpus corpus-lib)

ADD_EXECUTABLE(rand_markov ${SAMPLE_SOURCES})
